# api_saga_universe

./: .env.dist  Cargo.toml  docker-compose.yml
migrations/2023-01-02-191638_create_status/: up.sql
migrations/2023-01-14-103706_create_categories/: up.sql
migrations/2023-01-14-114833_create_countries/: up.sql
migrations/2023-01-14-143903_create_subcategories/: up.sql
migrations/2023-01-14-151325_create_licences/: down.sql  up.sql
migrations/2023-01-14-151332_create_sagas/: up.sql
migrations/2023-01-14-162852_create_sagas_subcategories/: up.sql
migrations/2023-01-15-154916_create_seasons/: up.sql
migrations/2023-01-16-111200_create_special_types/: down.sql  up.sql
migrations/2023-01-16-111233_create_episodes/: up.sql
migrations/2023-01-17-170010_create_group_types/: down.sql  up.sql
migrations/2023-01-17-170022_create_groups/: up.sql
migrations/2023-01-17-171111_create_peoples/: down.sql  up.sql
migrations/2023-01-17-171406_create_people_roles/: down.sql  up.sql
migrations/2023-01-17-171638_create_groups_episodes/: down.sql  up.sql
migrations/2023-01-17-171958_create_peoples_episodes/: down.sql  up.sql
migrations/2023-01-17-172243_create_groups_peoples/: down.sql  up.sql
migrations/2023-01-17-172535_create_peoples_sagas/: down.sql  up.sql
migrations/2023-01-17-172719_create_groups_sagas/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
