[package]
name = "api-saga-universe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["headers"] }
tokio = { version = "1.24.1", features = ["full"] }
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.3", features = ["serde"] }